# llamaFunctionCalling

./: .env  README.md  automation.py  functions.py  llama_integration.py  main.py  pyproject.toml  schemas.py  thingsToAdd.txt  ui.py  voice.py
